<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:layout_height="wrap_content">

               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:src="@drawable/land" />

               <ImageView
                   android:layout_width="match_parent"
                   android:src="@drawable/livingroom"
                   android:layout_height="wrap_content" />

               <ImageView
                   android:layout_width="match_parent"
                   android:src="@drawable/kitchen"
                   android:layout_height="wrap_content" />

               <ImageView
                   android:layout_width="match_parent"
                   android:src="@drawable/deluxdouble"
                   android:layout_height="wrap_content" />

               <ImageView
                   android:layout_width="match_parent"
                   android:src="@drawable/bedroom"
                   android:layout_height="wrap_content" />
               <ImageView
                   android:layout_width="match_parent"
                   android:src="@drawable/bathroom"
                   android:layout_height="wrap_content" />

           </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pd"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#fa0a02"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textmessage"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textColor="#2c3030"
        />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ad"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#fa02ee"/>


        <TextView
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Price 62Lakhs"
            android:gravity="center"
            android:textColor="#ff0303"
            android:textStyle="bold"
            android:textSize="30dp"/>


        <Button
            android:id="@+id/contact1"
            android:background="@drawable/buttonstyleselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:text="Contact"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#f7f4f5"/>
</LinearLayout>

</LinearLayout>