<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Propertydetail3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rhousee" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mlivingroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mbedroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mmbedroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mkitchen"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/village"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property3"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#ff0303"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hero"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#2c3030"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address3"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#ff05ac"
                android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/he"
            android:textSize="20dp"
            android:layout_marginLeft="65dp"
            android:textStyle="bold"
            android:textColor="#2c3030"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Price 80Lakhs"
            android:gravity="center"
            android:textColor="#fc0310"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/contact3"
            android:background="@drawable/buttonstyleselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:text="Contact"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#fff"/>



    </LinearLayout>



</LinearLayout>