<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Propertydetail4">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rhousee" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mlivingroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mbedroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mmbedroom"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/mkitchen"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/village"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Property4"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#fa4c02"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#0c0d0d"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address4"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textColor="#060ef7"/>


            <TextView
                android:layout_marginLeft="65dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textStyle="bold"
                android:textColor="#181717"
                android:textSize="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Price 98Lakhs"
            android:gravity="center"
            android:textColor="#ff0307"
            android:textStyle="bold"
            android:textSize="30dp"/>


        <Button
            android:id="@+id/contact4"
            android:background="@drawable/buttonstyleselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:text="Contact"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#f7f4f5"/>


    </LinearLayout>
</LinearLayout>