<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark1"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bs1"
                    android:layout_width="220dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/sff1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/address"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bs2"
                    android:layout_width="220dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/fs1"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/address1"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bs3"
                    android:layout_width="220dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/few1"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/address2"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bs4"
                    android:layout_width="220dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/hello1"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/address3"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
